<resources>
    <string name="app_name">Hi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_btn_text">登陆</string>
    <string name="login_text_tip">没有账号？点击注册</string>
    <string name="login_reg_tip">没有账号？点击注册</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="reg_email_hint">请输入您的邮箱（用于密码找回）</string>
    <string name="reg_btn_text">注册</string>
    <string name="reg_pwd_hint">请输入密码</string>
    <string name="reg_username_hint">请输入用户名</string>

    <string-array name="affairArray">
        <item>保密</item>
        <item>单身</item>
        <item>恋爱中</item>
        <item>已婚</item>
    </string-array>

    <string-array name="sexArray">
        <item>保密</item>
        <item>男</item>
        <item>女</item>
    </string-array>
</resources>
