<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lyt.hi.activity.LoginActivity">
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.lyt.hi.view.ClearableEditText
                android:id="@+id/login_user_edit"
                android:hint="@string/login_username_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.lyt.hi.view.ClearableEditText
                android:inputType="textPassword"
                android:id="@+id/login_pwd_edit"
                android:hint="@string/login_username_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/login_forget"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/login_forget_hint"/>
        <TextView
            android:id="@+id/login_reg_tip"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_reg_tip"/>
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/login_btn"
            android:text="@string/login_btn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
