<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lyt.hi.activity.RegActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/toolbar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.lyt.hi.view.ClearableEditText
                    android:id="@+id/reg_user_edit"
                    android:hint="@string/reg_username_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.lyt.hi.view.ClearableEditText
                    android:inputType="textPassword"
                    android:id="@+id/reg_pwd_edit"
                    android:hint="@string/reg_pwd_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.lyt.hi.view.ClearableEditText
                    android:inputType="textEmailAddress"
                    android:id="@+id/reg_email_edit"
                    android:hint="@string/reg_email_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/reg_btn"
                android:text="@string/reg_btn_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
